--- a/assets/css/destaques.css
+++ b/assets/css/destaques.css
@@ -26,8 +26,9 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-   grid-column-start: 1;/*onde começa a coluna e termina final exclusivo*/
-   grid-column-end: 4;
+   /*grid-column-start: 1;onde começa a coluna e termina final exclusivo
+    grid-column-end: 4;*/
+  
    grid-row-start:1;/*conde começa e termina a linha exclusivo*/
    grid-row-end: 3;
 
@@ -35,8 +36,8 @@
 .destaques__secundario:nth-child(2){/*herança da div acima/
     /*short hands*/
     background: url("../img/pubg.jpg") center / cover no-repeat;
-    grid-column: 4 / 4;
-    grid-row: 1 / 1;
+    /*grid-column: 4 / 4;
+    grid-row: 1 / 1;*/
    
 
     
@@ -44,23 +45,23 @@
 .destaques__secundario:nth-child(3){
     /*cover ocupa todo tamanho*/
     background: url("../img/slack.png") center / cover no-repeat;
-    grid-column: 4 / 4;
-    grid: 2 / 2;
+    /*grid-column: 4 / 4;
+    grid: 2 / 2;*/
 
 }
 .destaques__secundario:nth-child(4){
     background: url("../img/whatsapp.png") center / cover no-repeat;
-    grid-column: 4 / 4;
-    grid-row: 3 / 3;
+    /*/grid-column: 4 / 4;
+    grid-row: 3 / 3;*/
 }
 .destaques__secundario:nth-child(5){
 
     background: url("../img/cs-go.jpg") center / cover no-repeat;
-    grid-column: 3 / 3;
-    grid-row: 3 / 3;
+    /*grid-column: 3 / 3;
+    grid-row: 3 / 3;*/
 }
 .destaques__categorias{/*checar porque escreveu categoria*/
-    grid-column: 1 /3;
+    
     grid-row: 3 / 3;
 }
 /*usando flexbox abaixo*/
